@@ -1,6 +1,8 @@
 ver 0.23.15 (not yet released)
 * decoder
   - ffmpeg: fix build failure with FFmpeg 6.1
+* output
+  - alsa: limit buffer time to 2 seconds
 
 ver 0.23.14 (2023/10/08)
 * decoder
